# Minions

Control Center/: CMakeLists.txt  test.cpp
Control Center/DatabaseProtocol/: CMakeLists.txt  DatabaseProtocol.cpp  DatabaseProtocol.h  ReadMe
Control Center/TransportProtocol/: TransportProtocol.cpp
Station/: CMakeLists.txt  test.cpp
Station/TransportProtocol/: CMakeLists.txt  TransportProtocol.h
